Tests/Negative/NestedPrivateMod.mr
mod Outer {
    mod Inner {
        pub var x: i32 = 1;
    }
}

fun main(): i32 {
    echo Outer.Inner.x; echo '\n';
    return 0;
}
